2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (prog_t): Add an entry member.
	(launch_process): Use load_main and prog->entry when calling the entry
	point, and move the logic to load the main symbol to ...
	(load_main): ... here. New function.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/booster_null.c (booster_api): Renamed to ...
	(booster_null_api): ... this.
	* launcher/booster_gtk.c (booster_api): Renamed to ...
	(booster_gtk_api): ... this.
	* launcher/booster.c (booster_module_load): Dynamically generate
	booster_sym using the booster name. Statically prefix the
	booster_patch with MAEMO_BOOSTER_DIR. Free booster_path and
	booster_sym.

2006-09-27  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (release_childs): New function.
	(main): Use it after forking the child.

2006-09-27  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (sigs_interrupt): New function.
	(main): Use sigs_interrupt instead of directly siginterrupt.

2006-09-15  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/report.h (debug): Add a missing # in front of __VA_ARGS__.
	(error): Likewise.
	(info): Likewise.

2006-09-13  Guillem Jover  <guillem.jover@nokia.com>

	* README: Write about the new booster module architecture.
	* launcher/booster.h (booster_preinit): Remove function prototype.
	(booster_init): Likewise.
	(booster_reload): Likewise.
	(booster_api_t): New type.
	(MAEMO_LAUNCHER_BOOSTER_API_VERSION): New macro.
	(booster_t): New type.
	(booster_module_load): New function protoype.
	* launcher/booster.c: New file.
	* launcher/booster_null.c: Likewise.
	* launcher/booster_gtk.c (booster_api): New variable.
	(booster_preinit): Rename to ...
	(booster_gtk_preinit): ... this.
	(booster_init): Rename to ...
	(booster_gtk_init): ... this.
	(booster_reload): Renamed to ...
	(booster_gtk_reload): ... this.
	* launcher/launcher.c (usage): Document new '--booster' option.