@@ -1,5 +1,11 @@
 2006-09-28  Guillem Jover  <guillem.jover@nokia.com>
 
+	* launcher/launcher.c (launch_process): Move program environment and
+	argv debugging prints to ...
+	(print_prog_env_argv): ... here. New function.
+
+2006-09-28  Guillem Jover  <guillem.jover@nokia.com>
+
 	* launcher/launcher.c (prog_t): Add an entry member.
 	(launch_process): Use load_main and prog->entry when calling the entry
 	point, and move the logic to load the main symbol to ...
